tests/fixtures/invalid/bool_sub_bytes.py
# Cannot subtract Bool and Bytes
x: bool = True - b"hello"
